<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_pages"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/edittext"
        android:layout_width="fill_parent"
        android:layout_height="66dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:autofillHints=""
        android:gravity="center"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:text="@string/enter_your_emailaddress"
        android:textColor="#131212"
        android:textColorHint="@color/blackss"
        android:textIsSelectable="false"
        android:textSize="18sp"
        android:textStyle="normal"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="30dp" />

    <EditText
        android:id="@+id/password_"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:gravity="center"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:text="@string/enter_your_password"
        android:textColor="#131212"
        android:textColorHint="@color/blackss"
        android:textIsSelectable="false"
        android:textSize="18sp"
        android:textStyle="normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/buttonBarButtonStyle">

    <Button
        android:id="@+id/button1"
        android:layout_width="145dp"
        android:layout_height="51dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:textColor="#131212"
        android:textSize="18sp"
        style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/signup"
            android:layout_width="145dp"
            android:layout_height="51dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/signup"
            android:textColor="#131212"
            android:textSize="18sp"
            style="?android:attr/buttonBarButtonStyle"/>
</LinearLayout>
</LinearLayout>